# Aspreno

./: .coveragerc  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  Makefile  README.md  coverage.json  pyproject.toml  tox.ini
.github/workflows/: tests.yaml
aspreno/: __init__.py  _utils.py  global_handler.py  self_handled.py
docs/: conf.py  index.rst
docs/pages/: guides.rst  information_about_aspreno.rst
docs/pages/guides/: create_global_handler.rst  information_about_aspreno.rst
examples/fibonnaci/: exception_handler.py
examples/fibonnaci_2/: app.py
examples/fibonnaci_2/exceptions/: fibonacci.py
tests/: __init__.py  test_argumented_exception.py  test_exception_handler.py  test_register.py
