[tool.poetry]
name = "aspreno"
version = "0.1.0"
description = ""
authors = ["Predeactor <pro.julien.mauroy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
tox = "^4.4.8"
mypy = "^1.1.1"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.2"
pytest-html = "^3.2.0"
coverage = "^7.2.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = "^6.1.3"
insegel = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
